--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body{
 
 canvas{
   display:block;
+  background:#87ceeb;
   width:100%;
   height:100vh;
 }
@@ -66,7 +67,7 @@ button{
   gap:8px;
 }
 
-/* MOBILE */
+/* CONTROLES MOBILE */
 .btn{
   position:fixed;
   width:70px;
@@ -77,6 +78,7 @@ button{
   align-items:center;
   justify-content:center;
   font-size:28px;
+  user-select:none;
   z-index:40;
 }
 
@@ -84,7 +86,7 @@ button{
 #right{ left:100px; bottom:18px; }
 #jump{ right:18px; bottom:18px; }
 
-/* CHAT */
+/* CHAT ROBLOX */
 #openChatBtn{
   position:fixed;
   left:18px;
@@ -95,10 +97,10 @@ button{
   display:none;
   align-items:center;
   justify-content:center;
-  background:rgba(0,0,0,0.6);
+  background:rgba(0,0,0,0.45);
   color:white;
   font-size:24px;
-  z-index:55;
+  z-index:50;
   cursor:pointer;
 }
 
@@ -112,7 +114,8 @@ button{
   color:white;
   border-radius:14px;
   display:none;
-  z-index:50;
+  z-index:45;
+  overflow:hidden;
 }
 
 #messages{
@@ -135,6 +138,7 @@ button{
 
 <body>
 
+<!-- MENU -->
 <div id="menu">
   <h1 style="color:white;">🐱 Rikcat Adventures</h1>
   <button id="soloBtn" class="solo">Solo</button>
@@ -142,27 +146,34 @@ button{
   <button id="configBtn" class="config">Configurações</button>
 </div>
 
-<div id="configScreen">
-  <div class="config-box">
-    <label>Nick</label>
-    <input id="nickInput" maxlength="16">
+<!-- CONFIG -->
+<div class="config-box">
+  <label>Nick</label>
+  <input id="nickInput" maxlength="16">
 
-    <label>Cor do Corpo</label>
-    <input id="bodyColorInput" type="color" value="#ffffff">
+  <label>Skin</label>
+  <select id="skinSelect">
+    <option value="rikcat">Rikcat</option>
+    <option value="polvo">Polvo</option>
+  </select>
 
-    <label>Cor das Orelhas</label>
-    <input id="earsColorInput" type="color" value="#ff9fd4">
+  <label>Cor do Corpo</label>
+  <input id="bodyColorInput" type="color" value="#ffffff">
 
-    <button id="saveConfig">Salvar</button>
-  </div>
+  <label>Cor do Nariz</label>
+  <input id="faceColorInput" type="color" value="#ff9fd4">
+
+  <button id="saveConfig">Salvar</button>
 </div>
 
 <canvas id="canvas"></canvas>
 
+<!-- CONTROLES -->
 <div id="left" class="btn">⬅️</div>
 <div id="right" class="btn">➡️</div>
 <div id="jump" class="btn">🚀</div>
 
+<!-- CHAT -->
 <div id="openChatBtn">💬</div>
 <div id="chatBar">
   <div id="messages"></div>
